# goit-web-hw13

./: .gitignore
task1/: main.py  pyproject.toml
task1/src/repository/: contacts.py  users.py
task1/src/routes/: contacts.py
task1/src/services/: auth.py  email.py
task2/: pyproject.toml
task2/quotes/: .example.env
task2/quotes/quotes/: settings.py  urls.py
task2/quotes/quotes_app/: forms.py  models.py  urls.py  views.py
task2/quotes/quotes_app/migrations/: 0001_initial.py
task2/quotes/quotes_app/static/quotes_app/: main.css
task2/quotes/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag.html
task2/quotes/quotes_app/templatetags/: get_tags.py
task2/quotes/users_app/: urls.py  views.py
task2/quotes/users_app/templates/users_app/: login.html  reset_password.html  reset_password_done.html  reset_password_email.html  signup.html
task2/quotes/utils/: config.example.ini  connect.py  migration.py  models.py  parsing.py
